namespaces/kubernetes-dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8s-dash.plutolab.live`)
    services:
    - name: kubernetes-dashboard-kong-proxy
      namespace: kubernetes-dashboard
      port: 443
      scheme: https
      serversTransport: dashboard-transport
